--- a/lib/style.css
+++ b/lib/style.css
@@ -86,6 +86,12 @@ a:hover, .navbar-inverse .navbar-nav>li>a:hover, .footer_btn:hover , .legend-che
 /*--------------------------------------------------------*/
 /*--------  Map Layer Color Styles  ---------------------*/
 /*--------------------------------------------------------*/
+#legend-icon{
+    display: inline-block;
+    height: 5px;
+    margin-right: 5px;
+    width: 40px;
+}
 .RSEF {
     background-color: #24527F !important;
 }
@@ -97,6 +103,42 @@ a:hover, .navbar-inverse .navbar-nav>li>a:hover, .footer_btn:hover , .legend-che
 }
 .TSPU {
     background-color: #B4CA8B !important;
+}
+.EXT{
+     background-color: #795300 !important; 
+}
+.EXTU {
+background-color: #a1864c !important;
+}
+.rdf {
+    color:#24527F;
+    font-size: 35px;
+    vertical-align: middle;
+}
+.rduf {
+    color:#90ABD9;
+    font-size: 35px;
+    vertical-align: middle;
+}
+.trf {
+    color:#69883A;
+    font-size: 35px;
+    vertical-align: middle;
+}
+.truf {
+    color:#B4CA8B;
+    font-size: 35px;
+    vertical-align: middle;
+}
+.ext {
+    color:#795300;
+    font-size: 35px;
+    vertical-align: middle;
+}
+.extuf {
+    color:#a1864c;
+    font-size: 35px;
+    vertical-align: middle;
 }
 .leaflet-label-RSEF {
 background: rgb(235, 235, 235);
@@ -181,6 +223,26 @@ z-index:1001;
 .leaflet-label-EXT {
 background: rgb(121,83,0);
 background: rgba(121,83,0,0.90);
+border-color: rgba(72,49,0, 1);
+border-radius: 4px;
+border-style: solid;
+border-width: 2px;
+color: #fff;
+display: block;
+font: 12px/20px "Helvetica Neue", Arial, Helvetica, sans-serif;
+font-weight: bold;
+padding: 1px 6px;
+position: absolute;
+-webkit-user-select: none;
+   -moz-user-select: none;
+    -ms-user-select: none;
+        user-select: none;
+white-space: nowrap;
+z-index:1001;
+} 
+.leaflet-label-EXTU {
+background: rgb(161,134,76);
+background: rgba(161,134,76,0.90);
 border-color: rgba(72,49,0, 1);
 border-radius: 4px;
 border-style: solid;
