--- a/lib/core/core.css
+++ b/lib/core/core.css
@@ -40,6 +40,20 @@
 .navbar-collapse.in {
     overflow-y: hidden;
 }
+@media (max-width: 1025px) {
+          #mrp2045-logo {
+           width: 280px;
+           margin-top:4px;
+          }
+}
+@media (max-width: 770px) {
+          #mrp2045-logo {
+           display: none;
+          }
+           #dvrpc-logo {
+           margin: 10px 10px 0px 5px;
+          }
+}
 
 
 /*--------------------------------------------------------*/
@@ -246,14 +260,25 @@ input[type=checkbox]:checked + label, input[type=checkbox]:checked + label > div
     color: #555;
     border-style: solid;
     border-width: 1px;
- /*   padding: 8px 45px; */
+    min-height:55px;
 }
 #infoheader-text{
-    margin: 3px 0px 0px 0px;
-    font-weight: 400;
-    font-size: 12pt;
+  /*  margin: 3px 0px 0px 10px; */
 }
-/* #iconography {
+#infoheader-text p{
+  overflow: hidden; /* this is what keep the <p> from wrapping */
+  font-weight: 400;
+  font-size: 12pt;
+  color:#fff;
+  -webkit-box-decoration-break: clone;
+  box-decoration-break: clone;
+  margin-top: 9px;
+}
+#infoheader-icon {
+    float: left;
+    margin: -5px 10px 0px 0px;
+}
+ #iconography {
     font-size: 22px;
     color: #fff;
     padding: 5px;
@@ -264,7 +289,7 @@ input[type=checkbox]:checked + label, input[type=checkbox]:checked + label > div
     background-repeat: no-repeat;
     background-size: 30px 30px;
 }
-*/
+
 #togbtn {
     float: right;
     margin: 2px 10px 0 0;
@@ -294,6 +319,8 @@ input[type=checkbox]:checked + label, input[type=checkbox]:checked + label > div
 }
 .ihholder {
     background-color: #999;
+    text-align: center;
+    padding: 5px;   
 }
 .icon {
     width: 35px;
