--- a/lib/style.css
+++ b/lib/style.css
@@ -265,7 +265,18 @@ z-index:1001;
 /*--------------------------------------------------------*/
 /*--------  Map Infotable Styles  ---------------------*/
 /*--------------------------------------------------------*/
-table, th, td {
+table{
+  /*  border: 1px solid #d1d1d1; */
+    padding:5px;
+    background-color: #F1F1F1;
+    -moz-border-radius: 4px;
+    -webkit-border-radius: 4px;
+    border-radius: 4px;
+    padding-left: 6px;
+    text-align: center; 
+    font-size: 1.1em;
+}  
+th, td {
     border: 1px solid #d1d1d1;
     padding:5px;
     background-color: #F1F1F1;
@@ -275,7 +286,7 @@ table, th, td {
     padding-left: 6px;
     text-align: center; 
     font-size: 1.1em;
-}   
+}  
 th {
    font-size: 13px;
 } 
@@ -299,4 +310,5 @@ table.dataTable thead th {
 }
 #MRPtable {
    font-size: 12px;
+   border-bottom: 0px none #111;
 }
