--- a/lib/core/core.css
+++ b/lib/core/core.css
@@ -46,7 +46,7 @@
            margin-top:4px;
           }
 }
-@media (max-width: 770px) {
+@media (max-width: 810px) {
           #mrp2045-logo {
            display: none;
           }
@@ -54,8 +54,6 @@
            margin: 10px 10px 0px 5px;
           }
 }
-
-
 /*--------------------------------------------------------*/
 /*--------  Typeahead Search Styles  ---------------------*/
 /*--------------------------------------------------------*/
@@ -333,6 +331,7 @@ input[type=checkbox]:checked + label, input[type=checkbox]:checked + label > div
     border-radius: 4px;
     padding-left: 6px;
     font-size: 1.1em;
+    overflow: hidden;
 }
 .labelfield {
     font-size: .75em;
