--- a/lib/style.css
+++ b/lib/style.css
@@ -62,6 +62,23 @@ a:hover, .navbar-inverse .navbar-nav>li>a:hover, .footer_btn:hover , .legend-che
   /*  color: #5876A2 !important; */
     color: #004649 !important; 
 }
+a, .one{
+   /* These are technically the same, but use both */
+  overflow-wrap: break-word;
+  word-wrap: break-word;
+
+  -ms-word-break: break-all;
+  /* This is the dangerous one in WebKit, as it breaks things wherever */
+  word-break: break-all;
+  /* Instead use this non-standard one: */
+  word-break: break-word;
+
+  /* Adds a hyphen where the word breaks, if supported (No Blink) */
+  -ms-hyphens: auto;
+  -moz-hyphens: auto;
+  -webkit-hyphens: auto;
+  hyphens: auto;
+}
 .input-group #searchbox.form-control {
     float: right;
 }
@@ -82,6 +99,18 @@ a:hover, .navbar-inverse .navbar-nav>li>a:hover, .footer_btn:hover , .legend-che
     width: 100%;
     font-size: 1.2em;
     border: none;
+}
+#needs-graphic {
+  width:100%;
+  margin:0px 0px 10px 0px
+}
+@media (max-width: 990px) {
+          #needs-graphic {
+           display: block;
+           margin-left: auto;
+           margin-right: auto;
+           width: 70%;
+          }
 }
 /*--------------------------------------------------------*/
 /*--------  Map Layer Color Styles  ---------------------*/
