--- a/lib/style.css
+++ b/lib/style.css
@@ -29,6 +29,7 @@ body, .landing, #sidebar {
 }
 .ofooter, .oheader {
     background-color: #008d92 !important;
+    background: #008d92 !important;
 }
 .infowrap {
    background-color: #f5f5f5 !important;
