--- a/lib/style.css
+++ b/lib/style.css
@@ -292,6 +292,44 @@ position: absolute;
 white-space: nowrap;
 z-index:1001;
 }  
+.leaflet-label-NJC {
+background: rgba(255, 87, 51, 0.90);
+border-color: rgba(255, 87, 51, 1);
+border-radius: 4px;
+border-style: solid;
+border-width: 2px;
+color: #fff;
+display: block;
+font: 12px/20px "Helvetica Neue", Arial, Helvetica, sans-serif;
+font-weight: bold;
+padding: 1px 6px;
+position: absolute;
+-webkit-user-select: none;
+   -moz-user-select: none;
+    -ms-user-select: none;
+        user-select: none;
+white-space: nowrap;
+z-index:1001;
+}
+.leaflet-label-NJSL {
+background: rgba(48, 25, 52, 0.90);
+border-color: rgba(48, 25, 52, 1);
+border-radius: 4px;
+border-style: solid;
+border-width: 2px;
+color: #fff;
+display: block;
+font: 12px/20px "Helvetica Neue", Arial, Helvetica, sans-serif;
+font-weight: bold;
+padding: 1px 6px;
+position: absolute;
+-webkit-user-select: none;
+   -moz-user-select: none;
+    -ms-user-select: none;
+        user-select: none;
+white-space: nowrap;
+z-index:1001;
+}
 /*--------------------------------------------------------*/
 /*--------  Map Infotable Styles  ---------------------*/
 /*--------------------------------------------------------*/
