--- a/lib/style.css
+++ b/lib/style.css
@@ -330,6 +330,63 @@ position: absolute;
 white-space: nowrap;
 z-index:1001;
 }
+.leaflet-label-PAC {
+background: rgba(255, 195, 0 , 0.90);
+border-color: rgba(255, 195, 0 , 1);
+border-radius: 4px;
+border-style: solid;
+border-width: 2px;
+color: #fff;
+display: block;
+font: 12px/20px "Helvetica Neue", Arial, Helvetica, sans-serif;
+font-weight: bold;
+padding: 1px 6px;
+position: absolute;
+-webkit-user-select: none;
+   -moz-user-select: none;
+    -ms-user-select: none;
+        user-select: none;
+white-space: nowrap;
+z-index:1001;
+}
+.leaflet-label-PASH {
+background: rgba(250, 0, 72, 0.90);
+border-color: rgba( 250, 0, 72, 1);
+border-radius: 4px;
+border-style: solid;
+border-width: 2px;
+color: #fff;
+display: block;
+font: 12px/20px "Helvetica Neue", Arial, Helvetica, sans-serif;
+font-weight: bold;
+padding: 1px 6px;
+position: absolute;
+-webkit-user-select: none;
+   -moz-user-select: none;
+    -ms-user-select: none;
+        user-select: none;
+white-space: nowrap;
+z-index:1001;
+}
+.leaflet-label-PASS {
+background: rgba(178, 0, 250, 0.90);
+border-color: rgba( 178, 0, 250, 1);
+border-radius: 4px;
+border-style: solid;
+border-width: 2px;
+color: #fff;
+display: block;
+font: 12px/20px "Helvetica Neue", Arial, Helvetica, sans-serif;
+font-weight: bold;
+padding: 1px 6px;
+position: absolute;
+-webkit-user-select: none;
+   -moz-user-select: none;
+    -ms-user-select: none;
+        user-select: none;
+white-space: nowrap;
+z-index:1001;
+}
 /*--------------------------------------------------------*/
 /*--------  Map Infotable Styles  ---------------------*/
 /*--------------------------------------------------------*/
